# biobank-data-release-manager

./: Makefile  README.md  generate_sql_query_params.sh  pyproject.toml
legacy/: extract_and_validate_genotypes.sh  parse_sql_metadata.sh
src/biobank_data_release_manager.egg-info/: PKG-INFO  SOURCES.txt
src/release_manager/: __init__.py  extractor.py  sql_helper.py  validator.py
tests/: test_sql_helper.py  test_validator.py
